--- a/HTML_CSS-Tea-station-projects/styles.css
+++ b/HTML_CSS-Tea-station-projects/styles.css
@@ -14,15 +14,15 @@
     --primaryColor: #698f3f;
     --secondaryColor: #fca311;
     --mainDark: #3a3e3b;
-    --mainWhite:#fff;
-    --mainGrey:#e5e5e5;
+    --mainWhite: #fff;
+    --mainGrey: #e5e5e5;
     --mainTransition: all 0.3s ease-in-out;
-    --letterSpacing:0.5rem;
+    --letterSpacing: 0.5rem
 }
 
-boby
+body
 {
-    font-family:var(--headingFont);
+    font-family: var(--headingFont);
     line-height: 1.5;
 }
 
@@ -46,9 +46,9 @@ a
     color: var(--primaryColor);
 }
 
-/*clearfix */
+/* clearfix */
 .clearfix::after,
-.clearfix::before
+.cleafix::before
 {
     content: "";
     clear: both;
@@ -101,11 +101,11 @@ a
     50%
     {
         transform: scale(1.5);
-    }
+    } 
     100%
     {
         transform: scale(1);
-    }
+    }   
 }
 
 .navbar
@@ -118,9 +118,9 @@ a
     z-index: 2;
     background: var(--mainGrey);
     padding-top: 1rem;
-    padding-bottom: 2rem;
+    padding-left: 2rem;
     transition: var(--mainTransition);
-    /* transfrom */
+    /* transform */
     transform: translateX(-100%);
 }
 
@@ -148,6 +148,7 @@ a
     color: var(--primaryColor);
     transition: var(--mainTransition);
 }
+
 .nav-link:hover
 {
     color: var(--mainDark);
@@ -166,7 +167,7 @@ a
 .header
 {
     min-height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("./images/main-bcg.jpg") center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/main-bcg.jpg") center/cover no-repeat fixed;
 }
 
 /* banner */
@@ -187,26 +188,30 @@ a
     color: var(--primaryColor);
     /* animation */
     animation: slideFromRight 5s ease-in-out;
+
 }
 
 @keyframes slideFromRight
 {
     0%
     {
-       transform: translateX(1000px); 
-    }
+        transform: translateX(1000px);
+    } 
+    
     50%
     {
         transform: translateX(-200px);
-    }
+    }  
+
     75%
     {
         transform: translateX(50px);
-    }
+    } 
+
     100%
     {
         transform: translateX(0px);
-    }
+    } 
 }
 
 .banner-title
@@ -217,27 +222,30 @@ a
     margin-top: 2.5rem;
     line-height: 1.3;
     /* animation */
-    animation: slideFromLeft 5s ease-in-out;
+    animation: slideFromLeft 5s ease-in-out;;
 }
 
 @keyframes slideFromLeft
 {
     0%
     {
-       transform: translateX(-1000px); 
-    }
+        transform: translateX(-1000px);
+    } 
+    
     50%
     {
         transform: translateX(200px);
-    }
+    }  
+
     75%
     {
         transform: translateX(-50px);
-    }
+    } 
+
     100%
     {
         transform: translateX(0px);
-    }
+    } 
 }
 
 .main-btn, .banner-btn
@@ -249,7 +257,7 @@ a
     color: var(--mainDark);
     font-weight: bolder;
     outline: 0.2rem solid var(--primaryColor);
-    outline-offset: 5px;
+    outline-offset: 6px;
     cursor: pointer;
     margin-top: 2rem;
     transition: var(--mainTransition);
@@ -259,8 +267,9 @@ a
 {
     padding: 1.3rem 1.5rem;
     /* animation */
-    animation: show 2s ease-in-out;
+    animation: show 5s ease-in-out;
 }
+
 
 .main-btn:hover,
 .banner-btn:hover
@@ -275,27 +284,25 @@ a
     {
         transform: scale(2);
         opacity: 0;
-    }
+    } 
     50%
     {
         transform: scale(1.5);
         opacity: 0.5;
-    }
+    } 
     100%
     {
         transform: scale(1);
         opacity: 1;
-    }
+    }     
 }
 /* end of header */
-
 .content-divider
 {
-    height: 1rem;
-    background: linear-gradient(to left, var(--primaryColor), var(--secondaryColor), var(--primaryColor));
+    height: 0.6rem;
+    background: linear-gradient(to left, var(--primaryColor),var(--secondaryColor),var(--primaryColor));
 }
 /* end of content divider */
-
 /* skills */
 .skills
 {
@@ -317,7 +324,7 @@ a
     display: inline-block;
 }
 
-.skill-title
+.skills-title
 {
     font-size: 0.9rem;
     font-weight: bolder;
@@ -339,7 +346,7 @@ a
     background: var(--primaryColor);
 }
 
-.skill:hover .skill-title
+.skill:hover .skills-title
 {
     color: var(--mainWhite);
 }
@@ -364,8 +371,8 @@ a
         width: 25%;
     }
 }
-/* end of skills */
 
+/* end of skills */
 /* about */
 .about-img,
 .about-info
@@ -374,6 +381,15 @@ a
 }
 
 .about-picture-container
+{
+    background: var(--primaryColor);
+    border: 0.5rem solid var(--primaryColor);
+    border-radius: 1rem;
+    /* overflow */
+    overflow: hidden;
+}
+
+.about-picture
 {
     width: 100%;
     display: block;
@@ -392,7 +408,7 @@ a
     max-width: 26rem;
 }
 
-@media screen and(min-width:992px)
+@media screen and (min-width: 992px)
 {
     .about-img,
     .about-info
@@ -402,16 +418,17 @@ a
         padding: 2rem;
     }
 }
-/* end of about */
 
+/* end of about */
 /* products */
+
 .products
 {
     background: var(--mainDark);
 }
 
 .products-info,
-.product-inventory
+.products-inventory
 {
     padding: 2rem 0;
 }
@@ -434,6 +451,7 @@ a
 .product-price
 {
     color: var(--primaryColor);
+    letter-spacing: var(--letterSpacing);
     font-family: var(--slantedText);
 }
 
@@ -448,7 +466,7 @@ a
     .products-info
     {
         padding: 2rem 1rem;
-    }    
+    }
 }
 
 @media screen and (min-width: 992px)
@@ -456,198 +474,238 @@ a
     .product
     {
         width: 33.3%;
-    }   
+    }
 }
 
 @media screen and (min-width: 1200px)
 {
-    
     .products-info
     {
         float: left;
         width: 30%;
     }
-    
+
     .product
     {
-        padding: 1.5rem 1rem 01rem;
+        padding: 1.5rem 1rem 0 1rem;
     }
 
-    .product-inventory
+    .products-inventory
     {
         float: left;
         width: 70%;
     }
 }
-/* end of products */
 
+/* end of products */
 /* services */
 .services
 {
     background: var(--mainGrey);
 }
-
 .services-title
 {
     padding-top: 4rem;
 }
+
 .service-card
 {
-    boarder:0.3rem solid var(--primaryColor);
-    padding:0.2rem;
+    border:0.3rem solid var(--primaryColor);
+    padding: 0.2rem;
     border-radius: 1rem;
-    margin:2rem 0;
-    -wibkit-box-shadow:10px 10px 5px 0px rgb(0,0,0,0.75);
-    -wibkit-box-shadow:14px 12px 6px 0px rgb(0,0,0,0.75); 
-    -wibkit-box-shadow:14px 12px 23px 0px rgb(0,0,0,0.75);
+    margin: 2rem 0;
+    /* box shadow styling */
+    -webkit-box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.75);
+    transition: var(--mainTransition);
 }
-.server-img
+.service-card:hover
 {
-    width: 100px;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.service-img
+ {
+    width: 100%;
     display: block;
-    /* more style */
+    /* more styles */
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-}
-.server-info
+  }
+
+.service-info
 {
     background: var(--primaryColor);
-   border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
     text-align: center;
-    font-size: 1.3;
-    letter-spacing: var(letter-spacing);
-    color:var(--mainWhite);
+    font-size: 1.3rem;
+    letter-spacing: var(--letterSpacing);
+    color: var(--mainWhite);
     text-transform: capitalize;
-    padding:0.8rem 0 1rem 0;
-
+    padding: 2.5rem 0 1rem 0;
 }
-.serviice-btn
+
+.service-btn
 {
-    display:inline-block;
+    display: inline-block;
     background: var(--mainWhite);
     text-decoration: none;
     text-transform: capitalize;
-    border-radius: 0.2rem solid var(--mainWhite);
+    padding: 0.8rem 2rem;
+    color: var(--primaryColor);
+    font-weight: bolder;
+    border: 0.2rem solid var(--mainWhite);
+    border-radius: 0.5rem;
     cursor: pointer;
     margin-top: 1rem;
     transition: var(--mainTransition);
-
 }
-.sevice-btn:hover{
+
+.service-btn:hover
+{
     background: transparent;
     color: var(--mainWhite);
-
 }
-@media screen and (mid-width:768px)
+
+@media screen and (min-width: 768px)
 {
-    .service-card{
+    .service-card
+    {
         float: left;
         width: 45%;
         margin-right: 5%;
     }
-    }
-    @media screen and (mid-width:992px)
-    {
-        .service-card{
-            float: left;
-            width: 30%;
-
-        }
-    }
-    .service-img-container{
-        position: relative;
-
-    }
-
-    .sevice-icon{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        font-size: 2rem;
-        background: var(--secondaryColor);
-        padding: 0.25rem 0.6rem;
-        border-radius: 50%;
-        color: var(--mainDark);
-
-    }
-    .content-divider
-{
-    height: 1rem;
-    background: linear-gradient(to left, var(--secondaryColor), var(--primaryColor));
 }
+
+@media screen and (min-width: 992px)
+{
+    .service-card
+    {
+        float: left;
+        width: 30%;
+        margin-right: 3.333%;
+    }
+}
+
+.service-img-container
+{
+    position: relative;
+}
+
+.service-icon
+{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    font-size: 2rem;
+    background: var(--secondaryColor);
+    padding: 0.25rem 0.6rem;
+    border-radius: 50%;
+    border: 0.2rem solid var(--primaryColor);
+    color: var(--mainDark);
+    transform: translate(-50%, 50%);
+    /* box shadow */
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.content-divider
+{
+    height: 0.6rem;
+    background: linear-gradient(to left, var(--primaryColor),var(--secondaryColor),var(--primaryColor));
+}
+/* end of services */
+/* contact */
 .contact
 {
     padding-top: 2rem;
-
 }
-.contact-item{
+.contact-item
+{
     margin-bottom: 3rem;
-
 }
 
-.contact-title{
+.contact-title
+{
     color: var(--primaryColor);
     font-family: var(--slantedText);
+    text-transform: uppercase;
     letter-spacing: calc(var(--letterSpacing)*2);
     font-size: 1.6rem;
     margin-bottom: 0.5rem;
-
 }
 
-.contact-text{
+.contact-text
+{
     text-transform: uppercase;
 }
-.form-control{
+
+.form-control
+{
     display: block;
     width: 100%;
     border: none;
     border-bottom: 2px solid var(--primaryColor);
     outline: none;
     margin: 2rem 0;
-    padding: 1rem 0;
+    padding: 1.3rem 0;
     font-size: 0.85rem;
     font-weight: bold;
-
 }
-.form-control::placeholder{
+
+.form-control::placeholder
+{
     color: var(--primaryColor);
     text-transform: uppercase;
     letter-spacing: var(--letterSpacing);
 }
-@media screen and (min-width:992px){
-    .contact-info, .contact form{
+
+@media screen and (min-width: 992px)
+{
+    .contact-info, .contact-form
+    {
         float: left;
         width: 50%;
         padding: 0 1rem;
-
     }
-    contact-info{
-        padding: 5rem;
+
+    .contact-info
+    {
+        padding-top: 5rem;
     }
 }
-/*emd of contact */
-/*footer*/
-.footer{
+
+/* end of contact */
+/* footer */
+
+.footer
+{
     background: var(--mainDark);
     text-align: center;
-
 }
-.footer{
-    color: var(--mainDark);
+
+.social-icon
+{
+    color: var(--mainWhite);
     font-size: 1.3rem;
     margin-right: 1rem;
     transition: var(--mainTransition);
-
 }
-.social-icon:hover{
-    color: var(--mainWhite);
 
+.social-icon:hover
+{
+    color: var(--primaryColor);
 }
-.footer-text{
+
+.footer-text
+{
     text-transform: uppercase;
     color: var(--mainWhite);
     letter-spacing: var(--letterSpacing);
     margin-top: 1rem;
-    font-size: 0.8;
+    font-size: 0.85rem;
 }
